[CF][SECURITY-175] Обогащение UserInfo ролями